Finition JS, nouvelle navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,172 +1,4 @@
-body {
-  background-color: #f3e9f1;
-  padding-bottom: 50px;
-  padding: 0;
-}
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.figure {
-  margin: 0;
-}
-.cards {
-  border: 4px solid grey;
-  padding: 10px 0 0 0;
-  box-sizing: border-box;
-  border-radius: 30px;
-  margin-bottom: 25px;
-  display: flex;
-  flex-wrap: wrap;
-}
-.img-cards {
-  border-radius: 25px;
-  margin: 0;
-}
-h1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50px;
-  width: 100%;
-}
-img:hover {
-  cursor: pointer;
-}
-.navbar {
-  margin-bottom: 20px;
-  padding: 5px 10px 5px 10px;
-}
-.nav-onglet {
-  width: 250px;
-}
-.fab {
-  width: 50px;
-}
-.fas {
-  width: 50px;
-  padding-left: 7px;
-}
-.nav-item > a {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 280px;
-}
-.card-container > .cards > div > p {
-  font-size: 50px;
-  margin: 0;
-  width: 70%;
-  display: flex;
-  justify-content: center;
-}
-.price {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  padding-top: 15px;
-}
-.btn-price {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background-color: #ebd6e7;
-  border-radius: 25px;
-}
-.infos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-select {
-  margin-bottom: 10px;
-  font-size: 20px;
-}
-
-@media (min-width: 992px) {
-  .navbar > a,
-  .navbar > div > ul > li > a,
-  .btn-price {
-    font-size: 50px;
-  }
-  .product-cards > div > div > p {
-    font-size: 30px;
-  }
-  select {
-    font-size: 35px;
-  }
-}
-@media (max-width: 992px) {
-  .card-container > .cards > div > p {
-    font-size: 20px;
-  }
-  .product-cards > div > div > p {
-    font-size: 15px;
-  }
-}
-
-/* ---------------- Formulaire -------------------- */
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 25px;
-  border: 3px solid #e6c6e0;
-  border-radius: 25px;
-  max-width: 450px;
-}
-form > div {
-  font-size: 25px;
-  margin: 10px 0;
-  display: grid;
-}
-form > div > span {
-  font-size: 15px;
-  max-width: 290px;
-}
-form > div > label {
-  width: 25px;
-  margin-right: 75px;
-}
-form > div > input {
-  border-radius: 25px;
-  padding-left: 15px;
-}
-.valide {
-  font-size: 25px;
-  background-color: #ebd6e7;
-  margin: 15px 0 10px 0;
-  width: 125px;
-  height: 75px;
-  border-radius: 25px;
-  box-shadow: 10px 3px 8px black;
-}
-.error input {
-  color: red;
-  border: 1px solid rgba(255, 0, 0, 0.527);
-}
-
-span {
-  opacity: 0;
-}
-.error span {
-  visibility: visible;
-  opacity: 1;
-  color: red;
-}
-
-/* ---------------------- panier ---------------------- */
-
-.panier {
-  display: flex;
-  flex-direction: column;
-}
-.panier-row {
-  display: flex;
-  align-items: center;
+.navbar-brand > img {
+  width: 100px;
+  height: auto;
 }
