Bootstrap Acceuil/produit/panier (non fini)

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,12 @@
   width: 100px;
   height: auto;
 }
+.card-container {
+  justify-content: center;
+  align-items: center;
+}
+
+.panier {
+  justify-content: center;
+  align-items: center;
+}
