--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .container-fluid {
   margin-top: 25px;
 }
+
 .navbar-brand > img {
   width: 100px;
   height: auto;
@@ -13,6 +14,11 @@
 .panier {
   justify-content: center;
   align-items: center;
+}
+.panier > h3 {
+  margin: 50px 0;
+  display: flex;
+  justify-content: center;
 }
 form > div > span {
   color: red;
@@ -54,7 +60,9 @@ form > p {
 form > input {
   margin-top: 10px;
 }
-
+.message {
+  margin: 75px 0;
+}
 .message > h1,
 .message > p,
 .message > h2 {
